apps/noctis/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noctis-ingress
  namespace: galaxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: galaxy-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: noctis.pinwheel.fan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: noctis-prefect-service
                port:
                  number: 4200
  tls:
    - secretName: noctis-tls
      hosts:
        - noctis.pinwheel.fan
